--- a/src/app/dialog-edit-customer/dialog-edit-customer.component.html
+++ b/src/app/dialog-edit-customer/dialog-edit-customer.component.html
@@ -8,13 +8,13 @@
                 <div class="form-row">
                     <mat-form-field appearance="fill">
                         <mat-label>First Name</mat-label>
-                        <input [(ngModel)]="this.firestoreService.userToEdit.firstName" [disabled]="this.firestoreService.loading" name="firstName" matInput>
+                        <input [(ngModel)]="this.firestoreService.customerToEdit.firstName" [disabled]="this.firestoreService.loading" name="firstName" matInput>
                         <mat-icon matSuffix>person</mat-icon>
                         <!-- <mat-hint>*Required</mat-hint> -->
                     </mat-form-field>
                     <mat-form-field appearance="fill">
                         <mat-label>Last Name</mat-label>
-                        <input [(ngModel)]="this.firestoreService.userToEdit.lastName" [disabled]="this.firestoreService.loading" name="lastName" matInput>
+                        <input [(ngModel)]="this.firestoreService.customerToEdit.lastName" [disabled]="this.firestoreService.loading" name="lastName" matInput>
                         <mat-icon matSuffix>person</mat-icon>
                         <!-- <mat-hint>*Required</mat-hint> -->
                     </mat-form-field>
@@ -29,19 +29,19 @@
                 <div class="form-row">
                     <mat-form-field appearance="fill">
                         <mat-label>Phone number</mat-label>
-                        <input [(ngModel)]="this.firestoreService.userToEdit.phoneNumber" [disabled]="this.firestoreService.loading" name="phoneNumber" matInput>
+                        <input [(ngModel)]="this.firestoreService.customerToEdit.phoneNumber" [disabled]="this.firestoreService.loading" name="phoneNumber" matInput>
                         <mat-icon matSuffix>call</mat-icon>
                         <!-- <mat-hint>*Required</mat-hint> -->
                     </mat-form-field>
                     <mat-form-field appearance="fill">
                         <mat-label>Email</mat-label>
-                        <input [(ngModel)]="this.firestoreService.userToEdit.email" [disabled]="this.firestoreService.loading" name="email" matInput>
+                        <input [(ngModel)]="this.firestoreService.customerToEdit.email" [disabled]="this.firestoreService.loading" name="email" matInput>
                         <mat-icon matSuffix>mail</mat-icon>
                         <!-- <mat-hint>*Required</mat-hint> -->
                     </mat-form-field>
                     <mat-form-field appearance="fill">
                         <mat-label>Website</mat-label>
-                        <input [(ngModel)]="this.firestoreService.userToEdit.website" [disabled]="this.firestoreService.loading" name="website" matInput>
+                        <input [(ngModel)]="this.firestoreService.customerToEdit.website" [disabled]="this.firestoreService.loading" name="website" matInput>
                         <mat-icon matSuffix>language</mat-icon>
                         <mat-hint>*Optional</mat-hint>
                     </mat-form-field>
@@ -52,25 +52,25 @@
                 <div class="form-row">
                     <mat-form-field appearance="fill">
                         <mat-label>Street & house number</mat-label>
-                        <input [(ngModel)]="this.firestoreService.userToEdit.street" [disabled]="this.firestoreService.loading" name="street" matInput>
+                        <input [(ngModel)]="this.firestoreService.customerToEdit.street" [disabled]="this.firestoreService.loading" name="street" matInput>
                         <mat-icon matSuffix>signpost</mat-icon>
                         <!-- <mat-hint>*Required</mat-hint> -->
                     </mat-form-field>
                     <mat-form-field appearance="fill">
                         <mat-label>Zip Code</mat-label>
-                        <input [(ngModel)]="this.firestoreService.userToEdit.zipCode" [disabled]="this.firestoreService.loading" name="zipCode" matInput>
+                        <input [(ngModel)]="this.firestoreService.customerToEdit.zipCode" [disabled]="this.firestoreService.loading" name="zipCode" matInput>
                         <mat-icon matSuffix>location_on</mat-icon>
                         <!-- <mat-hint>*Required</mat-hint> -->
                     </mat-form-field>
                     <mat-form-field appearance="fill">
                         <mat-label>City</mat-label>
-                        <input [(ngModel)]="this.firestoreService.userToEdit.city" [disabled]="this.firestoreService.loading" name="city" matInput>
+                        <input [(ngModel)]="this.firestoreService.customerToEdit.city" [disabled]="this.firestoreService.loading" name="city" matInput>
                         <mat-icon matSuffix>location_city</mat-icon>
                         <!-- <mat-hint>*Required</mat-hint> -->
                     </mat-form-field>
                     <mat-form-field appearance="fill">
                         <mat-label>Country</mat-label>
-                        <input [(ngModel)]="this.firestoreService.userToEdit.country" [disabled]="this.firestoreService.loading" name="country" matInput>
+                        <input [(ngModel)]="this.firestoreService.customerToEdit.country" [disabled]="this.firestoreService.loading" name="country" matInput>
                         <mat-icon matSuffix>flag</mat-icon>
                         <!-- <mat-hint>*Required</mat-hint> -->
                     </mat-form-field>
