--- a/src/app/customers/customers.component.html
+++ b/src/app/customers/customers.component.html
@@ -1,4 +1,4 @@
-<table mat-table [dataSource]="this.firestoreService.users" class="mat-elevation-z8">
+<table mat-table [dataSource]="this.firestoreService.customers" class="mat-elevation-z8">
     <ng-container matColumnDef="firstName">
         <th mat-header-cell *matHeaderCellDef>First Name</th>
         <td mat-cell *matCellDef="let element"> {{element.firstName}} </td>
@@ -15,7 +15,7 @@
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="openUserDetails(row.userId)">
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="openUserDetails(row.customerId)">
     </tr>
 </table>
 
