--- a/src/app/dialog-delete-customer/dialog-delete-customer.component.html
+++ b/src/app/dialog-delete-customer/dialog-delete-customer.component.html
@@ -1,11 +1,11 @@
 <div class="dialog-wrapper">
     <mat-progress-bar *ngIf="this.firestoreService.loading" mode="indeterminate" class="dialog-progress-bar"></mat-progress-bar>
-    <h1 mat-dialog-title>Delete User</h1>
+    <h1 mat-dialog-title>Delete Customer</h1>
     <div mat-dialog-content>
-        <p>Are you sure you wan't to delete this user?</p>
+        <p>Are you sure you wan't to delete this customer?</p>
     </div>
     <div mat-dialog-actions>
         <button (click)="this.dialogRef.close()" mat-button>Cancel</button>
-        <button (click)="this.deleteUser()" color="warn" mat-button cdkFocusInitial>Delete</button>
+        <button (click)="this.deleteCustomer()" color="warn" mat-button cdkFocusInitial>Delete</button>
     </div>
 </div>
