--- a/src/app/dialog-edit-customer/dialog-edit-customer.component.html
+++ b/src/app/dialog-edit-customer/dialog-edit-customer.component.html
@@ -1,6 +1,6 @@
 <div class="dialog-wrapper">
     <mat-progress-bar *ngIf="this.firestoreService.loading" mode="indeterminate" class="dialog-progress-bar"></mat-progress-bar>
-    <h1 mat-dialog-title>Edit User</h1>
+    <h1 mat-dialog-title>Edit Customer</h1>
     <div mat-dialog-content>
         <form action="">
             <fieldset>
@@ -80,6 +80,6 @@
     </div>
     <div mat-dialog-actions>
         <button (click)="this.dialogRef.close()" mat-button>Cancel</button>
-        <button (click)="editUser()" color="primary" mat-button cdkFocusInitial>Save</button>
+        <button (click)="editCustomer()" color="primary" mat-button cdkFocusInitial>Save</button>
     </div>
 </div>
