--- a/src/app/customers/customers.component.html
+++ b/src/app/customers/customers.component.html
@@ -11,7 +11,7 @@
 
     <ng-container matColumnDef="dateOfBirth">
         <th mat-header-cell *matHeaderCellDef>Date of Birth</th>
-        <td mat-cell *matCellDef="let element"> {{element.dateOfBirth}} </td>
+        <td mat-cell *matCellDef="let element" matTooltip="MM/DD/YYYY"> {{this.utils.convertTimestampToDate(element.dateOfBirth)}} </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
