setup forgot-password template

--- a/src/app/forgot-password/forgot-password.component.html
+++ b/src/app/forgot-password/forgot-password.component.html
@@ -1,1 +1,12 @@
-<p>forgot-password works!</p>
+<h2>Reset Password</h2>
+<p class="text-center">Please enter your email address to request a password reset.</p>
+
+<form action="" onsubmit="return false;">
+
+    <mat-form-field appearance="outline">
+        <mat-label>Email</mat-label>
+        <input type="email" matInput #passwordResetEmail required>
+    </mat-form-field><br>
+    <button (click)="this.authService.forgotPassword(passwordResetEmail.value)" type="submit" mat-raised-button color="primary">Reset Password</button><br>
+    <a routerLink="/login"> Go back to login</a>
+</form>
