--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,6 +20,8 @@ fieldset {
     --primary-col: #3F51B5;
     --accent-col: #FF4081;
     --warn-col: #F44A3E;
+    // Custom colors
+    --error-col: #F7C600;
 }
 
 .dialog-wrapper {
