--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,31 +1,35 @@
-<div>
-    <p>New to Simple CRM?</p>
-    <a [routerLink]="['/sign-up']" routerLinkActive="router-link-active">Sign up</a>
-</div>
+<div class="content">
+    <div class="left-section"></div>
 
-<div class="login-container">
-    <button (click)="this.authService.googleAuth()" class="google-login" mat-stroked-button>
-        <img class="google-icon" src="./../../assets/img/icons/google.svg" alt="Google Logo Icon"/>Login with Google Account</button>
-    <p>or</p>
+    <div class="right-section">
+        <h1>Sign in to account</h1>
+        <div class="login-wrapper">
+            <form>
+                <mat-form-field appearance="outline">
+                    <mat-label>Email</mat-label>
+                    <mat-icon matSuffix>mail</mat-icon>
+                    <input autocomplete="off" type="email" matInput #userName placeholder="Email" />
+                </mat-form-field>
+                <div class="password-wrapper">
+                    <mat-form-field appearance="outline">
+                        <mat-label>Password</mat-label>
+                        <mat-icon matSuffix>lock</mat-icon>
+                        <input autocomplete="off" type="password" matInput #userPassword placeholder="Password" />
+                    </mat-form-field>
+                    <a [routerLink]="['/forgot-password']" routerLinkActive="router-link-active">Forgot Password?</a>
+                </div>
 
-    <form>
-        <p>
-            <mat-form-field appearance="outline">
-                <mat-label>Email</mat-label>
-                <input autocomplete="off" type="email" matInput #userName placeholder="Email" />
-            </mat-form-field>
-        </p>
-        <p>
-            <mat-form-field appearance="outline">
-                <mat-label>Password</mat-label>
-                <input autocomplete="off" type="password" matInput #userPassword placeholder="Password" />
-            </mat-form-field>
-        </p>
-
-        <button mat-raised-button color="primary" (click)="this.authService.signIn(userName.value, userPassword.value)">Login</button>
-        <p>
-            <a [routerLink]="['/forgot-password']" routerLinkActive="router-link-active">Forgot Password?</a>
-        </p>
-
-    </form>
+                <button class="login-btn" mat-raised-button color="primary" (click)="this.authService.signIn(userName.value, userPassword.value)">Login</button>
+            </form>
+            <div class="sign-up-wrapper">
+                <span>New User? </span>
+                <a [routerLink]="['/sign-up']" routerLinkActive="router-link-active">Sign up</a>
+            </div>
+            <p>OR</p>
+            <button (click)="this.authService.googleAuth()" class="google-login" mat-stroked-button>
+                <img class="google-icon" src="./../../assets/img/icons/google.svg" alt="Google Logo Icon"/>
+                <span>Login with Google Account</span>
+            </button>
+        </div>
+    </div>
 </div>
