--- a/src/app/components/account/account.component.html
+++ b/src/app/components/account/account.component.html
@@ -1,1 +1,17 @@
-<p>account works!</p>
+<mat-card *ngIf="authService.userData as user">
+    <mat-card-header>
+        <img class="profile-picture" src="{{(user.photoURL) ? user.photoURL : './../../../assets/img/blank_user.svg'}}" alt="{{user.displayName}}">
+        <h1>Welcome <strong>{{(user.displayName) ? user.displayName : 'User'}}!</strong></h1>
+    </mat-card-header>
+
+    <mat-card-content>
+        <p><strong>User ID: </strong>{{user.uid}}</p>
+        <p><strong>Display Name: </strong>{{user.displayName}}</p>
+        <p><strong>Email: </strong>{{user.email}}</p>
+        <p><strong>Email Verified: </strong>{{user.emailVerified}}</p>
+    </mat-card-content>
+    <mat-card-actions>
+        <button mat-stroked-button color="primary" (click)="this.authService.logOut()">Log Out</button>
+        <button mat-stroked-button color="basic" (click)="this.openEditUserDialog()">Edit Profile</button>
+    </mat-card-actions>
+</mat-card>
