--- a/src/app/components/dialog-edit-user/dialog-edit-user.component.html
+++ b/src/app/components/dialog-edit-user/dialog-edit-user.component.html
@@ -1,14 +1,14 @@
 <h1 mat-dialog-title>Edit Profile</h1>
 <div mat-dialog-content *ngIf="authService.userData as user">
-    <!-- <div (click)="fileUpload.click()" class="profile-picture-wrapper">
+    <div (click)="fileUpload.click()" class="profile-picture-wrapper">
         <img class="profile-picture" src="{{ user.photoURL? user.photoURL : './../../../assets/img/blank_user.svg' }}" alt="{{ user.displayName }}" />
         <i class="material-icons">edit</i>
-    </div> -->
+    </div>
     <mat-form-field appearance="outline">
         <mat-label>Change Display Name</mat-label>
         <input [(ngModel)]="this.authService.newDisplayName" matInput>
     </mat-form-field>
-    <!-- <input (change)="this.firestorage.uploadImage($event)" #fileUpload type="file" accept=".jpg,.png" hidden> -->
+    <input (change)="this.firestorageService.uploadImage($event)" #fileUpload type="file" accept=".jpg,.png" hidden>
 </div>
 <div mat-dialog-actions>
     <button (click)="this.dialogRef.close()" mat-button>Cancel</button>
