more style improvements

--- a/src/app/components/dialog-add-customer/dialog-add-customer.component.scss
+++ b/src/app/components/dialog-add-customer/dialog-add-customer.component.scss
@@ -10,6 +10,18 @@ fieldset {
     gap: 16px;
 }
 
+legend {
+    color: var(--primary-col);
+}
+
+mat-datepicker-toggle {
+    color: var(--primary-col) !important;
+}
+
+.mat-icon {
+    color: var(--primary-col);
+}
+
 .mat-datepicker-toggle {
     color: unset;
 }
