--- a/src/app/components/account/account.component.scss
+++ b/src/app/components/account/account.component.scss
@@ -11,3 +11,20 @@
     height: 96px;
     border-radius: 50%;
 }
+
+.data-row {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    margin-bottom: 16px;
+    strong {
+        color: var(--primary-col);
+        font-weight: 400;
+        border-bottom: solid 1px rgba(0, 0, 0, .12);
+        margin-bottom: 4px;
+    }
+    span {
+        font-weight: 100;
+    }
+}
