cherry pick guestLogin

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -30,6 +30,7 @@
                 <img class="google-icon" src="./../../assets/img/icons/google.svg" alt="Google Logo Icon"/>
                 <span>Login with Google Account</span>
             </button>
+            <button mat-raised-button (click)="this.openGuestUserDialog()">Login as guest</button>
         </div>
     </div>
 </div>
