--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -11,7 +11,7 @@ a {
 .left-section {
     width: 40%;
     height: 100%;
-    background-image: url('./../../assets/img/background/architecture.jpg');
+    background-image: url('./../../../assets/img/background/architecture.jpg');
     background-position: 50% 50%;
     background-size: cover;
 }
