--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -33,7 +33,7 @@
                 <span>Simple CRM</span>
             </div>
             <div class="toolbar-right" *ngIf="authService.userData as user">
-                <span>Lukas Volgger</span>
+                <span>{{ user.displayName }}</span>
                 <a routerLink="account">
                     <img class="profile-picture" src="{{ user.photoURL? user.photoURL : './../../../../assets/img/blank_user.svg' }}" alt="{{ user.displayName }}" />
                 </a>
