--- a/src/app/components/sign-up/sign-up.component.html
+++ b/src/app/components/sign-up/sign-up.component.html
@@ -1,17 +1,22 @@
 <h2>Sign Up</h2>
 
-<form>
+<form [formGroup]="signUpForm" (ngSubmit)="onSubmit()">
+    <mat-form-field appearance="outline">
+        <mat-label>Display Name</mat-label>
+        <input formControlName="displayName" type="text" placeholder="Display Name" autocomplete="off" matInput required>
+    </mat-form-field>
+    <br>
     <mat-form-field appearance="outline">
         <mat-label>Email</mat-label>
-        <input type="email" matInput #userEmail required>
+        <input formControlName="email" type="email" placeholder="Email" autocomplete="off" matInput required>
     </mat-form-field>
     <br>
     <mat-form-field appearance="outline">
         <mat-label>Password</mat-label>
-        <input type="password" matInput #userPwd required>
+        <input formControlName="password" type="password" placeholder="Password" autocomplete="off" matInput required>
     </mat-form-field>
     <br>
-    <button mat-raised-button color="primary" (click)="authService.signUp(userEmail.value, userPwd.value)">Sign Up</button>
+    <button mat-raised-button color="primary" (click)="onSubmit()">Sign Up</button>
     <button mat-raised-button color="secondary" (click)="authService.googleAuth()">Continue with Google</button><br>
     <a (click)="this.utils.redirectToLogin()">Already have an account?</a><br>
 </form>
