--- a/src/app/components/dialog-guest-user/dialog-guest-user.component.html
+++ b/src/app/components/dialog-guest-user/dialog-guest-user.component.html
@@ -5,5 +5,5 @@
         <mat-label>Display Name</mat-label>
         <input formControlName="displayName" type="text" matInput required>
     </mat-form-field>
-    <button (click)="onSubmit()" color="primary" type="submit" mat-raised-button>Login</button>
+    <button color="primary" type="submit" mat-raised-button>Login</button>
 </form>
