--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -18,8 +18,7 @@
                     </mat-form-field>
                     <a [routerLink]="['/forgot-password']" routerLinkActive="router-link-active">Forgot Password?</a>
                 </div>
-
-                <button class="login-btn" mat-raised-button color="primary" (click)="onSubmit()">Login</button>
+                <button class="login-btn" type="submit" mat-raised-button color="primary">Login</button>
             </form>
             <div class="sign-up-wrapper">
                 <span>New User? </span>
