validate edit user form

--- a/src/app/components/dialog-guest-user/dialog-guest-user.component.html
+++ b/src/app/components/dialog-guest-user/dialog-guest-user.component.html
@@ -3,7 +3,7 @@
 <form [formGroup]="guestLoginForm" (ngSubmit)="onSubmit()">
     <mat-form-field appearance="outline">
         <mat-label>Display Name</mat-label>
-        <input formControlName="displayName" type="text" matInput required>
+        <input formControlName="displayName" type="text" placeholder="Display Name" matInput required>
     </mat-form-field>
     <button color="primary" type="submit" mat-raised-button>Login</button>
 </form>
