--- a/src/app/components/dialog-edit-user/dialog-edit-user.component.html
+++ b/src/app/components/dialog-edit-user/dialog-edit-user.component.html
@@ -1,19 +1,20 @@
 <h1 mat-dialog-title>Edit Profile</h1>
-<div mat-dialog-content *ngIf="authService.userData as user">
-    <div (click)="fileUpload.click()" class="profile-picture-wrapper">
-        <img class="profile-picture" src="{{ user.photoURL? user.photoURL : './../../../assets/img/blank_user.svg' }}" alt="{{ user.displayName }}" />
-        <i class="material-icons">edit</i>
+<form [formGroup]="editUserForm" (ngSubmit)="onSubmit()">
+    <div mat-dialog-content *ngIf="authService.userData as user">
+        <div (click)="fileUpload.click()" class="profile-picture-wrapper">
+            <img class="profile-picture" src="{{ user.photoURL? user.photoURL : './../../../assets/img/blank_user.svg' }}" alt="{{ user.displayName }}" />
+            <i class="material-icons">edit</i>
+        </div>
+        <mat-form-field appearance="outline">
+            <mat-label>Change Display Name</mat-label>
+            <input formControlName="newDisplayName" placeholder="Change Display Name" minlength="3" matInput>
+            <mat-error *ngIf="this.editUserForm.invalid">*Please enter at least 3 characters</mat-error>
+        </mat-form-field>
+        <input (change)="this.firestorageService.uploadImage($event); this.dialogRef.close()" #fileUpload type="file" accept=".jpg,.png" hidden>
     </div>
-    <mat-form-field appearance="outline">
-        <mat-label>Change Display Name</mat-label>
-        <input [(ngModel)]="this.authService.newDisplayName" matInput>
-    </mat-form-field>
-    <input (change)="this.firestorageService.uploadImage($event); this.dialogRef.close()" #fileUpload type="file" accept=".jpg,.png" hidden>
-</div>
-<div mat-dialog-actions>
-    <button (click)="this.dialogRef.close()" mat-button>Cancel</button>
-    <button (click)="this.openDeleteUserDialog(); this.dialogRef.close()" mat-button color="warn">Delete User</button>
-    <button (click)="this.authService.changeDisplayName(this.authService.newDisplayName);this.dialogRef.close()" color="primary" mat-button cdkFocusInitial>Ok</button>
-</div>
-
-<!-- TODO Form validation and minlength for name -->
+    <div mat-dialog-actions>
+        <button (click)="this.dialogRef.close()" mat-button>Cancel</button>
+        <button (click)="this.openDeleteUserDialog(); this.dialogRef.close()" mat-button color="warn">Delete User</button>
+        <button type="submit" color="primary" mat-button cdkFocusInitial>Ok</button>
+    </div>
+</form>
