--- a/src/app/components/dialog-guest-user/dialog-guest-user.component.html
+++ b/src/app/components/dialog-guest-user/dialog-guest-user.component.html
@@ -3,7 +3,8 @@
 <form [formGroup]="guestLoginForm" (ngSubmit)="onSubmit()">
     <mat-form-field appearance="outline">
         <mat-label>Display Name</mat-label>
-        <input formControlName="displayName" type="text" placeholder="Display Name" matInput required>
+        <input formControlName="displayName" type="text" placeholder="Display Name" minlength="3" matInput required>
+        <mat-error *ngIf="this.guestLoginForm.invalid">*Please enter a display name</mat-error>
     </mat-form-field>
     <button color="primary" type="submit" mat-raised-button>Login</button>
 </form>
