--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -9,12 +9,14 @@
                     <mat-label>Email</mat-label>
                     <mat-icon matSuffix>mail</mat-icon>
                     <input formControlName="email" autocomplete="off" type="email" matInput placeholder="Email" required>
+                    <mat-error *ngIf="this.loginForm.invalid">*Please enter your email address</mat-error>
                 </mat-form-field>
                 <div class="password-wrapper">
                     <mat-form-field appearance="outline">
                         <mat-label>Password</mat-label>
                         <mat-icon matSuffix>lock</mat-icon>
                         <input formControlName="password" autocomplete="off" type="password" matInput placeholder="Password" required>
+                        <mat-error *ngIf="this.loginForm.invalid">*Please enter your password</mat-error>
                     </mat-form-field>
                     <a [routerLink]="['/forgot-password']" routerLinkActive="router-link-active">Forgot Password?</a>
                 </div>
